--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  table_calendar: ^3.0.9
-  intl: ^0.18.0
+  flutter_localizations:
+    sdk: flutter
+  localization: ^2.1.0
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
