--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.clicker.flutter_clicker_2">
    <application
-        android:label="flutter_clicker_2"
+        android:label="Clicker"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
